# pymonorepo

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/pymonorepo/: __init__.py  api.py  backend.py  pep621.py  pyproject.py
