[build-system]
requires = ["packaging>=22", "tomli", "editables"]
build-backend = "pymonorepo.backend"
backend-path = ["src"]

[project]
name = "pymonorepo"
dynamic = ["version", "description"]
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["packaging>=22", "tomli", "editables"]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/chrisjsewell/pymonorepo"

[project.scripts]
pymonorepo = "pymonorepo:main"

[tool.pymonorepo]
# projects = ["src/*"]

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
