[build-system]
requires = ["packaging>=22", "tomli", "editables"]
build-backend = "pymonorepo.backend"
backend-path = ["packages/builder/src"]

[tool.monorepo.workspace]
packages = ["packages/*"]

[project]
name = "pymonorepo-meta"
version = "0.0.1"
description = "A monorepo tool for Python"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = [
    "requires-python",
    "dependencies",
    "entry-points",
    "scripts",
    "gui-scripts",
]

[project.urls]
Home = "https://github.com/chrisjsewell/pymonorepo"

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
