[build-system]
requires = ["packaging>=22", "tomli; python_version<'3.11'"]
build-backend = "pymonorepo.backend"
backend-path = ["packages/builder/src"]

[tool.monorepo.workspace]
packages = ["packages/*"]

[project]
name = "pymonorepo-meta"
version = "0.0.1"
description = "A monorepo tool for Python"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dynamic = [
    "license",
    "requires-python",
    "dependencies",
    "entry-points",
    "scripts",
    "gui-scripts",
]

[project.urls]
Home = "https://github.com/chrisjsewell/pymonorepo"

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
